src/styles/links.scss
@use "base";

.links-container {
  display: flex;
  flex-direction: column;
  gap: 55px;
  height: 100dvh;
  padding: 25px;
  font-size: 14px;
}

.links {
  font-family: "Fragment Mono", sans-serif;
  max-width: 350px;
}

.links-name {
  font-family: "Fragment Mono", sans-serif;

  text-decoration: none;

  &:visited {
    color: black;
  }

  &:hover {
    text-decoration: none;
  }
}

.links > a {
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: base.$gray-content;

  &:visited {
    color: inherit;
  }

  &:hover {
    text-decoration: underline;
    text-decoration-style: wavy;
    text-decoration-color: black;
  }
}

